--- a/Javascript/package.json
+++ b/Javascript/package.json
@@ -2,10 +2,27 @@
   "name": "jsmix",
   "version": "0.0.1",
   "description": "Javascript bridge for Native APps",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack-dev-server --hot --inline",
+    "go": "nodemon --watch index.js --exec webpack"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "jquery": "^3.2.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "copy-webpack-plugin": "^4.2.0",
+    "webpack": "^3.7.1",
+    "webpack-dev-server": "^2.9.2"
+  }
 }
